Fixed wrap around ETA

--- a/public/stylesheets/massTriage.css
+++ b/public/stylesheets/massTriage.css
@@ -195,17 +195,10 @@ div.right{
 }
 
 table.tablesorter thead {
-	background-image: url('bg.gif');
+/*	background-image: url('../images/bg.gif'); */
 	background-repeat: no-repeat;
 	background-position: right;
 	cursor: pointer;
 }
 
-table.tablesorter thead tr .headerSortUp {
-	background-image: url('asc.gif');
-}
-
-table.tablesorter thead tr .headerSortDown {
-	background-image: url('desc.gif');
-}
 
